# bonsai

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
