[package]
name = "bonsai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bonsai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.99"
thiserror = "2.0.16"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
candle-metal = "0.27.1"
safetensors = "0.6.2"
tokenizers = { version = "0.22.0", features = ["http"] }
memmap2 = "0.9.8"
rand = "0.8"
# HTTP + streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
futures-util = "0.3"

